# bqplot-gl

./: .gitignore  MANIFEST.in  README.md  babel.config.js  bqplot-gl.json  bqplot-gl.webm  install.json  karma.conf.js  package.json  pyproject.toml  setup.cfg  setup.py  test-environment.yml  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  update_galata_references.yaml
bqplot_gl/: __init__.py  _frontend.py  _version.py  figure.py  marks.py
bqplot_gl/nbextension/: extension.js
examples/: example.ipynb  lines.ipynb  scatter.ipynb
scripts/: write_version.py
shaders/: lines-fragment.glsl  lines-vertex.glsl  scales.glsl  scatter-vertex.glsl
src/: LinesGLModel.ts  LinesGLView.ts  ScatterGLModel.ts  ScatterGLView.ts  extension.ts  figure.ts  index.ts  plugin.ts  serializers.ts  utils.ts  values.ts  version.ts
src/test/: dummy-manager.ts  index.ts  scatter-gl.ts  widget-utils.ts
ui-tests/: README.md  package.json  playwright.config.js
ui-tests/tests/: bqplot.test.ts
ui-tests/tests/notebooks/: lines_update.ipynb  scatter.ipynb  scatter_update.ipynb
