[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "bqplot-gl"
description = "bqplot plugin providing marks powered by WebGL"
readme = "README.md"
authors = [
    { name = "The BQplot Development Team" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
    "Graphics",
    "Plotting",
    "d3",
    "WebGL",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bqplot>=0.13.0a0,<0.14",
]
version = "0.1.0a0"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/bqplot/bqplot-gl"

[tool.hatch.build]
artifacts = [
    "bqplot_gl/nbextension/index.*",
    "bqplot_gl/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"bqplot_gl/nbextension" = "share/jupyter/nbextensions/bqplot-gl"
"bqplot_gl/labextension" = "share/jupyter/labextensions/bqplot-gl"
"bqplot-gl.json" = "etc/jupyter/nbconfig/notebook.d/bqplot-gl.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "bqplot_gl/nbextension/index.js",
    "bqplot_gl/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.1.0a0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "bqplot_gl/_version.py"

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
