[metadata]
name = bqplot-gl
description = Plugin to bqplot powered by WebGL.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
license_file = LICENSE
author = The BQplot Development Team
url = https://github.com/bqplot/bqplot-gl
keywords = ipython, jupyter, widgets, graphics, plotting, d3, webgl

[options]
packages = find:
install_requires =
    bqplot>=0.13.0a0,<0.14
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
python_requires = >=3.6
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=1
